--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@ body, html {
 		left: 0;
 		padding: 25px 15px 15px;
 		width: 100%;
-		font-family: 'Raleway', sans-serif;
 		font-size: 16px;
 		color: white;
 		opacity: 0;
@@ -258,7 +257,7 @@ body, html {
     <p id="caption" class="w3-opacity w3-large"></p>
   </div>
 </div>
-
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
 <div class="gallery">
 	<div class="gallery__column">
 		<a href="https://unsplash.com/@jeka_fe" target="_blank" class="gallery__link">
