--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@ body, html {
 /* Second image (Portfolio) */
 .bgimg-2 {
   background-image: url("/media/IMG_0543 Large.jpeg");
-  min-height: 400px;
+  min-height: 100%;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
   background-image: url("/media/IMG_0634 Large.jpeg");
-  min-height: 400px;
+  min-height: 100%;
 }
 
 .w3-wide {letter-spacing: 10px;}
@@ -83,7 +83,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Maranello</span>
+    <span class="w3-xxlarge w3-text-white w3-wide">Bike Trips</span>
   </div>
 </div>
 
@@ -97,7 +97,7 @@ body, html {
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-      <img src="/media/IMG_0144 Large.jpeg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+      <img src="/media/IMG_0100 Large.jpeg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
