--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@ body, html {
 /* First image (Logo. Full height) */
 .bgimg-1 {
   background-image: url('/media/IMG_0502 Large.jpeg');
-  min-height: 100%;
+  min-height: 80%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
   background-image: url("/media/IMG_0543 Large.jpeg");
-  min-height: 100%;
+  min-height: 70%;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
   background-image: url("/media/IMG_0634 Large.jpeg");
-  min-height: 100%;
+  min-height: 70%;
 }
 
 .w3-wide {letter-spacing: 10px;}
@@ -83,7 +83,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-xxlarge w3-text-dark-grey w3-wide">Tuscany 2023</span>
+    <span class="w3-xxlarge w3-text-black w3-wide">Tuscany 2023</span>
   </div>
 </div>
 
@@ -218,7 +218,11 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE I WORK</h3>
   <p class="w3-center"><em>I'd love your feedback!</em></p>
-
+  <div class="google-map">
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ban6-EbsRVlIfwDkU5qYQjqBWZE-M8w&ehbc=2E312F" width="640" height="480"></iframe>
+  </div>
+  
+  
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
       <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
