--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="w3schools.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="flexbox.css" />
+<link rel="stylesheet" href="tuscana.css" />
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
@@ -17,7 +17,7 @@ body, html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgvideo1 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -40,6 +40,12 @@ body, html {
 .bgimg-3 {
   background-image: url("/media/IMG_0634 Large.jpeg");
   min-height: 70%;
+}
+
+.bgvideo1 { 
+    height: 300px;
+    padding-bottom: 50px;
+    padding-top: 50px; 
 }
 
 .w3-wide {letter-spacing: 10px;}
@@ -214,19 +220,23 @@ body, html {
   </div>
 </div>
 
+<div class="bgvideo1 w3-display-container w3-opacity-min">
+  <video autoplay muted loop>
+  <source src="media/My Movie 4.mov" type="video/mp4">
+  </video>
+</div>
+
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE I WORK</h3>
   <p class="w3-center"><em>I'd love your feedback!</em></p>
-  <div class="google-map">
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ban6-EbsRVlIfwDkU5qYQjqBWZE-M8w&ehbc=2E312F" width="640" height="480"></iframe>
+  <div class="google-maps">
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ban6-EbsRVlIfwDkU5qYQjqBWZE-M8w&ehbc=2E312F" 
+          width="640" height="480" frameborder="0" style="border:0">
+    </iframe>
   </div>
   
-  
   <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
-    </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Chicago, US<br>
