--- a/index2.html
+++ b/index2.html
@@ -26,19 +26,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/media/IMG_0502 Large.jpeg');
+  background-image: url('/media/IMG_0502 SanG.jpeg');
   min-height: 80%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/media/IMG_0543 Large.jpeg");
+  background-image: url("/media/IMG_0543 Rides.jpeg");
   min-height: 70%;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/media/IMG_0634 Large.jpeg");
+  background-image: url("/media/IMG_0634 Giro.jpeg");
   min-height: 70%;
 }
 
@@ -103,7 +103,7 @@ body, html {
       <div class="column">
         <div class="image-item">
           <img src="/media/IMG_0587 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-          <div class="overlay"><span>Image title</span></div>
+          <div class="overlay w3-medium"><span>Mormoraia arrival area</span></div>
         </div>
         <div class="image-item">
           <img src="/media/IMG_0503 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
@@ -172,5 +172,5 @@ body, html {
       }
   }
   </script>
-  </body>
-  </html>    
+</body>
+</html>    
