--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/media/IMG_0502 Large.jpeg');
+  background-image: url('/media/IMG_0502 SanG.jpeg');
   min-height: 80%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/media/IMG_0543 Large.jpeg");
+  background-image: url("/media/IMG_0543 Rides.jpeg");
   min-height: 70%;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/media/IMG_0634 Large.jpeg");
+  background-image: url("/media/IMG_0634 Giro.jpeg");
   min-height: 70%;
 }
 
@@ -46,6 +46,7 @@ body, html {
     height: 300px;
     padding-bottom: 50px;
     padding-top: 50px; 
+    z-index: index -999;
 }
 
 .w3-wide {letter-spacing: 10px;}
@@ -158,47 +159,47 @@ body, html {
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0062 Large.jpeg" alt="" />
+        <img src="/media/IMG_0062 Agro.jpeg.jpeg" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0587 Large.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0587 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0503 Large.jpeg" alt="" />
-        <div class="overlay"><span>Image title</span></div>
-      </div>
-    </div>
-    <div class="column">
-      <div class="image-item">
-        <img src="/media/IMG_0496 Large.jpeg" alt="" />
-        <div class="overlay"><span>Image title</span></div>
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0560 Large.jpeg" alt="" />
-        <div class="overlay"><span>Image title</span></div>
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0561 Large.jpeg" alt="" />
+        <img src="/media/IMG_0503 Agro.jpeg" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
     </div>
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0559 Large.jpeg" alt="" />
+        <img src="/media/IMG_0496 Siena.jpeg" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0554 Large.jpeg" alt="" />
+        <img src="/media/IMG_0560 Rides.jpeg" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0554 Large.jpeg" alt="" />
+        <img src="/media/IMG_0561 Rides.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0559 Rides.jpeg" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0554 Large.jpeg" alt="" />
+        <img src="/media/IMG_0554 Rides.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0554 Rides.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0554 Rides.jpeg" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
     </div>
