--- a/index2.html
+++ b/index2.html
@@ -85,7 +85,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container" id="home">
     <div class="w3-display-middle" style="white-space:nowrap;">
-        <span class="w3-center w3-padding-large w3-dark-grey w3-xlarge w3-wide w3-animate-opacity">Tuscana</span>
+        <span class="w3-center w3-padding-large w3-dark-grey w3-xlarge w3-wide w3-animate-opacity w3-hide-small">Tuscana</span>
     </div>  
 </div> 
 <div class="w3-content w3-container w3-padding-64" id="about">
@@ -97,7 +97,7 @@ body, html {
       ea commodo consequat.
     </p>
 </div>
-<div class="container">
+<div class="w3-container">
     <h2 class="heading-text">Agriturismo Mormoraia</h2>
     <div class="image-gallery">
       <div class="column">
