--- a/index2.html
+++ b/index2.html
@@ -136,6 +136,113 @@ body, html {
       </div>
     </div>
 </div>
+<!-- Second Parallax Image with Portfolio Text -->
+<div class="bgimg-2 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+    <span class="w3-xxlarge w3-text-white w3-wide">RIDES</span>
+  </div>
+</div>
+<div class="w3-content w3-container w3-padding-64" id="rides">
+  <h3 class="w3-center">Bike Rides</h3>
+  <p>We have created a fictional "personal" website/blog, Duis 
+    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+    ea commodo consequat.
+  </p>
+</div>
+<!-- Google Map -->
+<div class="w3-content w3-container w3-padding-64">
+  <h3 class="w3-center">Map</h3>
+  <p class="w3-center"><em>Use Two Fingers to Pan and Zoom</em></p>
+  <div class="google-maps">
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ban6-EbsRVlIfwDkU5qYQjqBWZE-M8w&ehbc=2E312F" 
+          width="640" height="480" frameborder="0" style="border:0">
+    </iframe>
+  </div>
+</div>
+<div class="w3-content w3-container w3-padding-64" id="portfolio">
+  <h3 class="w3-center">MY WORK</h3>
+  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
+  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+  <div class="w3-row-padding w3-center">
+    <div class="w3-col m3">
+      <img src="/media/IMG_0811 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="/media/IMG_0812 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="/media/IMG_0813 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="/media/IMG_0815 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+    </div>
+  </div>
+</div>
+
+<div class="container" id="portfolio">
+  <h2 class="heading-text">Ride Pictures</h2>
+  <div class="image-gallery">
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0062 Agro.jpeg.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0587 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0503 Agro.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0496 Siena.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0560 Rides.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0561 Rides.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0559 Rides.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0554 Rides.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0554 Rides.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0554 Rides.jpeg" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
     <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
     <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
