--- a/index2.html
+++ b/index2.html
@@ -85,11 +85,11 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container" id="home">
     <div class="w3-display-middle" style="white-space:nowrap;">
-        <span class="w3-center w3-padding-large w3-dark-grey w3-xlarge w3-wide w3-animate-opacity w3-hide-small">Tuscana</span>
+        <span class="w3-center w3-padding-large w3-dark-grey w3-xlarge w3-wide w3-animate-opacity w3-hide-small">Tuscany</span>
     </div>  
 </div> 
 <div class="w3-content w3-container w3-padding-64" id="about">
-    <h3 class="w3-center">Tuscana</h3>
+    <h3 class="w3-center">Tuscany 2023 Trip</h3>
     <p>We have created a fictional "personal" website/blog, Duis 
       aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
       qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -161,7 +161,7 @@ body, html {
     </iframe>
   </div>
 </div>
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
+<div class="w3-content w3-container w3-padding-64" >
   <h3 class="w3-center">MY WORK</h3>
   <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
@@ -184,54 +184,141 @@ body, html {
   </div>
 </div>
 
-<div class="container" id="portfolio">
+<div class="container" >
   <h2 class="heading-text">Ride Pictures</h2>
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0062 Agro.jpeg.jpeg" alt="" />
+        <img src="/media/IMG_0092 Ride.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0587 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0486 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0503 Agro.jpeg" alt="" />
+        <img src="/media/IMG_0504 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0554 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0561 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
     </div>
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0496 Siena.jpeg" alt="" />
+        <img src="/media/IMG_0509 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0560 Rides.jpeg" alt="" />
+        <img src="/media/IMG_0510 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0561 Rides.jpeg" alt="" />
+        <img src="/media/IMG_0513 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0559 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0562 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
     </div>
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0559 Rides.jpeg" alt="" />
+        <img src="/media/IMG_0528 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0554 Rides.jpeg" alt="" />
+        <img src="/media/IMG_0529 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0554 Rides.jpeg" alt="" />
+        <img src="/media/IMG_0531 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0554 Rides.jpeg" alt="" />
+        <img src="/media/IMG_0543 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
+      <div class="image-item">
+        <img src="/media/IMG_0560 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0581 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Third Parallax Image with Portfolio Text -->
+<div class="bgimg-3 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+    <span class="w3-xxlarge w3-text-white w3-wide">Giro d'Italia</span>
+  </div>
+</div>
+<div class="w3-content w3-container w3-padding-64" id="giro">
+  <h3 class="w3-center">Giro d'Italia</h3>
+  <p>We have created a fictional "personal" website/blog, Duis 
+    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+    ea commodo consequat.
+  </p>
+</div>
+<div class="container" >
+  <h2 class="heading-text">Viareggio Pictures</h2>
+  <div class="image-gallery">
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0612 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0628 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0634 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0625 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0629 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0793 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0626 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0631 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0794 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <div class="overlay"><span>Image title</span></div>
+      </div>
+    </div>
     </div>
   </div>
 </div>
