--- a/index2.html
+++ b/index2.html
@@ -97,7 +97,7 @@ body, html {
       ea commodo consequat.
     </p>
 </div>
-<div class="w3-container">
+<div class="w3-container w3-content">
     <h2 class="heading-text">Agriturismo Mormoraia</h2>
     <div class="image-gallery">
       <div class="column">
@@ -166,19 +166,16 @@ body, html {
   <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
+    <div class="w3-col m4">
       <img src="/media/IMG_0811 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
-
-    <div class="w3-col m3">
+    <div class="w3-col m4">
       <img src="/media/IMG_0812 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
     </div>
-
-    <div class="w3-col m3">
+    <div class="w3-col m4">
       <img src="/media/IMG_0813 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
     </div>
-
-    <div class="w3-col m3">
+    <div class="w3-col m4">
       <img src="/media/IMG_0815 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
     </div>
   </div>
@@ -300,10 +297,6 @@ body, html {
         <img src="/media/IMG_0629 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
-      <div class="image-item">
-        <img src="/media/IMG_0793 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
-      </div>
     </div>
     <div class="column">
       <div class="image-item">
@@ -312,10 +305,6 @@ body, html {
       </div>
       <div class="image-item">
         <img src="/media/IMG_0631 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0794 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         <div class="overlay"><span>Image title</span></div>
       </div>
     </div>
