--- a/index2.html
+++ b/index2.html
@@ -42,13 +42,6 @@ body, html {
   min-height: 70%;
 }
 
-
-/* Fourth image  */
-.bgimg-4 {
-  background-image: url("/media/IMG_0498 Siena.jpeg");
-  min-height: 100%;
-}
-
 .bgvideo1 { 
     height: 300px;
     padding-bottom: 50px;
@@ -59,7 +52,7 @@ body, html {
 .w3-hover-opacity {cursor: pointer;}
 
 /* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
+@media only screen and (max-device-width: 992px) {
   .bgimg-1, .bgimg-2, .bgimg-3 {
     background-attachment: scroll;
     min-height: 400px;
@@ -78,7 +71,6 @@ body, html {
       <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> TUSCANA</a>
       <a href="#rides" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> RIDES</a>
       <a href="#giro" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> GIRO</a>
-      <a href="#tourist" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> TOURIST</a>
       </a>
     </div>
   
@@ -87,7 +79,6 @@ body, html {
       <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">TUSCANA</a>
       <a href="#rides" class="w3-bar-item w3-button" onclick="toggleFunction()">RIDES</a>
       <a href="#giro" class="w3-bar-item w3-button" onclick="toggleFunction()">GIRO</a>
-      <a href="#tourist" class="w3-bar-item w3-button" onclick="toggleFunction()">TOURIST</a>
     </div>
   </div>
 
@@ -119,6 +110,9 @@ body, html {
         <div class="image-item">
           <img src="/media/IMG_0568 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         </div>
+        <div class="image-item">
+          <img src="/media/IMG_0099 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        </div>
       </div>
       <div class="column">
         <div class="image-item">
@@ -127,6 +121,9 @@ body, html {
         <div class="image-item">
           <img src="/media/IMG_0571 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         </div>
+        <div class="image-item">
+          <img src="/media/IMG_0546 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        </div>
       </div>
       <div class="column">
         <div class="image-item">
@@ -134,6 +131,9 @@ body, html {
         </div>
         <div class="image-item">
           <img src="/media/IMG_0565 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        </div>
+        <div class="image-item">
+          <img src="/media/IMG_0100 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         </div>
       </div>
     </div>
@@ -181,11 +181,9 @@ body, html {
       <div class="column">
         <div class="image-item">
           <img src="/media/IMG_0813 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-  
         </div>
         <div class="image-item">
           <img src="/media/IMG_0815 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-  
         </div>
       </div>
     </div>
@@ -265,11 +263,11 @@ body, html {
     </div>
   </div>
 </div>
-<!-- Third Parallax Image -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">Giro d'Italia</span>
-  </div>
+
+<div class="bgvideo1 w3-display-container w3-opacity-min">
+  <video autoplay muted loop>
+  <source src="media/My Movie 4.mov" type="video/mp4">
+  </video>
 </div>
 <div class="w3-content w3-container w3-padding-64" id="giro">
   <h3 class="w3-center">Giro d'Italia</h3>
@@ -281,7 +279,7 @@ body, html {
   </p>
 </div>
 <div class="container" >
-  <h2 class="heading-text">Viareggio Pictures</h2>
+  <h2 class="heading-text">Viareggio</h2>
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
@@ -300,7 +298,6 @@ body, html {
       </div>
       <div class="image-item">
         <img src="/media/IMG_0629 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
       </div>
     </div>
     <div class="column">
@@ -313,22 +310,6 @@ body, html {
     </div>
   </div>
 </div>
-
-<!-- Fourth Parallax Image -->
-<div class="bgimg-4 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">Rest Days</span>
-  </div>
-</div>
-<div class="w3-content w3-container w3-padding-64" id="giro">
-  <h3 class="w3-center">Tourist Stuff</h3>
-  <p>We have created a fictional "personal" website/blog, Duis 
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-    ea commodo consequat.
-  </p>
-</div>
 <div class="container" >
   <h2 class="heading-text">Maranello</h2>
   <div class="image-gallery">
@@ -339,9 +320,6 @@ body, html {
       <div class="image-item">
         <img src="/media/IMG_0606 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
       </div>
-      <div class="image-item">
-        <img src="/media/IMG_0634 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-      </div>
     </div>
     <div class="column">
       <div class="image-item">
@@ -349,7 +327,6 @@ body, html {
       </div>
       <div class="image-item">
         <img src="/media/IMG_0608 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
       </div>
     </div>
     <div class="column">
@@ -361,7 +338,6 @@ body, html {
       </div>
     </div>
   </div>
-  <h2 class="heading-text">Siena, Poggibonsi</h2>
 </div>
 
 <!-- Modal for full size images on click-->
