--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@ body, html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3, .bgvideo1 {
+.bgimg-1, .bgimg-2, .bgimg-3 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -42,8 +42,9 @@ body, html {
   min-height: 70%;
 }
 
-.bgvideo1 { 
-    height: 300px;
+.bgideo1 { 
+    width: 100%;
+    height: auto;
     padding-bottom: 50px;
     padding-top: 50px; 
 }
@@ -312,7 +313,7 @@ body, html {
     ea commodo consequat.
   </p>
 </div>
-<div class="w3-display-container w3-opacity-min">
+<div class="bgvideo1 w3-display-container w3-opacity-min">
   <video autoplay muted loop>
   <source src="media/My Movie 4.mov" type="video/mp4">
   </video>
@@ -326,9 +327,9 @@ body, html {
     ea commodo consequat.
   </p>
 </div>
-<div class="w3-display-container w3-opacity-min">
+<div class="bgvideo1 w3-display-container w3-opacity-min w3-padding-64">
   <video>
-  <source src="media/My Movie 3.mov" type="video/mp4">
+    <source src="media/My Movie 3.mov" type="video/mp4">
   </video>
 </div>
 <div class="w3-content w3-container w3-padding-64" id="giro">
