--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@ body, html {
 .w3-hover-opacity {cursor: pointer;}
 
 /* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-device-width: 1600px) {
   .bgimg-1, .bgimg-2, .bgimg-3 {
     background-attachment: scroll;
     min-height: 400px;
@@ -91,22 +91,23 @@ body, html {
 </div> 
 <div class="w3-content w3-container w3-padding-64" id="about">
     <h3 class="w3-center">Tuscany 2023 Trip</h3>
-    <p>We have created a fictional "personal" website/blog, Duis 
-      aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-      qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-      ea commodo consequat.
+    <p>This trip was all about cycling The Tuscan countryside. We stayed in the center of Tuscany near a world-heritage medieval
+     village called San Gimignano. We stayed in Mormoraia Agriturismo located just outside the village. Mormoraia is a working 
+     farm with a winery and olive oil production. We drank their excellent wine and ate their olive oil every day.
     </p>
+    <p>Click on photos for more details
+     </p>
 </div>
 <div class="w3-container w3-content">
-    <h2 class="heading-text">Agriturismo Mormoraia</h2>
     <div class="image-gallery">
       <div class="column">
         <div class="image-item">
-          <img src="/media/IMG_0587 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+          <img src="/media/IMG_0587 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="Arrival at Mormoraia" />
         </div>
         <div class="image-item">
-          <img src="/media/IMG_0503 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+          <img src="/media/IMG_0503 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+           alt="View from our suite showing the restaurant " />
         </div>
         <div class="image-item">
           <img src="/media/IMG_0568 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
@@ -117,13 +118,16 @@ body, html {
       </div>
       <div class="column">
         <div class="image-item">
-          <img src="/media/IMG_0584 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+          <img src="/media/IMG_0584 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="The pool and our accomodations up the hill" />
         </div>
         <div class="image-item">
-          <img src="/media/IMG_0571 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+          <img src="/media/IMG_0571 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="View from the highest tower in San Gimignano (Mormoraia is somewhere out there)" />
         </div>
         <div class="image-item">
-          <img src="/media/IMG_0546 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+          <img src="/media/IMG_0546 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="The menu board of our favourite pizzeria - I Boceri Ristorante" />
         </div>
       </div>
       <div class="column">
@@ -233,6 +237,10 @@ body, html {
       </div>
       <div class="image-item">
         <img src="/media/IMG_0562 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+      div class="image-item">
+        <img src="/media/IMG_0582 Rides.jpeg " onclick="onClick(this)" class="w3-hover-opacity" alt="" />
 
       </div>
     </div>
