--- a/index2.html
+++ b/index2.html
@@ -265,7 +265,7 @@ video {
         <img src="/media/IMG_0562 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
 
       </div>
-      div class="image-item">
+      <div class="image-item">
         <img src="/media/IMG_0582 Rides.jpeg " onclick="onClick(this)" class="w3-hover-opacity" alt="" />
 
       </div>
