--- a/index2.html
+++ b/index2.html
@@ -65,7 +65,14 @@ video {
 }
 
 @media (max-width: 1200px) {
-    video {
+  .video-container {
+        position: relative;
+        width: 100%;
+        max-width: 800px; 
+        margin: auto;
+  }  
+  
+  video {
         /* Add specific styles for small screens */
         width: 100%;
         height: auto;
