--- a/index2.html
+++ b/index2.html
@@ -109,7 +109,7 @@ video {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container" id="home">
     <div class="w3-display-middle" style="white-space:nowrap;">
-        <span class="w3-center w3-padding-large w3-dark-grey w3-xlarge w3-wide w3-animate-opacity w3-hide-small">Tuscany</span>
+        <span class="w3-center w3-padding-large w3-dark-grey w3-xlarge w3-wide w3-animate-opacity w3-hide-medium">Tuscany</span>
     </div>  
 </div> 
 <div class="w3-content w3-container w3-padding-64" id="about">
@@ -128,36 +128,43 @@ video {
           alt="Arrival at Mormoraia" />
         </div>
         <div class="image-item">
+          <img src="/media/IMG_0062 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+           alt="The view from our suite (San Gimignano in the distance)" />
+        </div>
+        <div class="image-item">
           <img src="/media/IMG_0503 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-           alt="View of the restaurant and main building from our suite" />
+          alt="Main farm buildings and restaurant" />
         </div>
         <div class="image-item">
-          <img src="/media/IMG_0568 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        </div>
-        <div class="image-item">
-          <img src="/media/IMG_0099 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+          <img src="/media/IMG_0584 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="Our suite was the second floor of the building up the hill" />
         </div>
       </div>
       <div class="column">
-        <div class="image-item">
-          <img src="/media/IMG_0584 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-          alt="The pool and our accomodations up the hill" />
-        </div>
         <div class="image-item">
           <img src="/media/IMG_0571 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
           alt="Amazing View from the highest tower in San Gimignano (Lisa did not attempt the scary climb up this 600 year old tower)" />
         </div>
         <div class="image-item">
-          <img src="/media/IMG_0546 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
-          alt="The menu board of our favourite pizzeria - I Boceri Ristorante" />
+          <img src="/media/IMG_0565 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="Main square in San Gimignano" />
+        </div>
+        <div class="image-item">
+          <img src="/media/IMG_0567 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="Some frescos I saw on my way up the tower" />
+        </div>
+        <div class="image-item">
+          <img src="/media/IMG_0568 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="Some frescos I saw on my way up the tower" />
         </div>
       </div>
       <div class="column">
         <div class="image-item">
-          <img src="/media/IMG_0062 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+          <img src="/media/IMG_0546 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="Menu board at our favourite pizzeria I Boceri Ristorante " />
         </div>
         <div class="image-item">
-          <img src="/media/IMG_0565 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+          <img src="/media/IMG_0099 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
         </div>
         <div class="image-item">
           <img src="/media/IMG_0100 Pizza.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
@@ -173,16 +180,39 @@ video {
 </div>
 <div class="w3-content w3-container w3-padding-64" id="rides">
   <h3 class="w3-center">Bike Rides</h3>
-  <p>We have created a fictional "personal" website/blog, Duis 
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-    ea commodo consequat.
+  <p>We planned for five big rides heading in different directions from our base in San Gimignano. 
+     However, we were rained out a few days and settled on four long rides and a few shorter trips. We were still able
+     to clock 250 KM and 1400 M of climbing. 
   </p>
+</div>
+<div class="w3-content w3-container w3-padding-64" >
+  <h3 class="w3-center">Destinations</h3>
+  <p class="w3-center">Our destinations were hilltop castles and medieval villages. Lots of fun <em>Stande Bianche</em>
+    (white gravel roads) and up and down climbing</p>
+    <div class="image-gallery">
+      <div class="column">
+        <div class="image-item">
+          <img src="/media/IMG_0811 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+          alt="Lago di Chiusi (We got lost twice and didn't make it to our planned goal of Cortona)" />
+        </div>
+        <div class="image-item">
+          <img src="/media/IMG_0812 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="Casole d' Elsa" />
+        </div>
+      </div>
+      <div class="column">
+        <div class="image-item">
+          <img src="/media/IMG_0813 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="Scorgiano" />
+        </div>
+        <div class="image-item">
+          <img src="/media/IMG_0815 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="Castel Pietralo" />
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Google Map -->
 <div class="w3-content w3-container w3-padding-64">
-  <h3 class="w3-center">Map</h3>
+  <h3 class="w3-center">Here is a map of all the locations we visited in Tuscany on our Bikes</h3>
   <p class="w3-center"><em>Use Two Fingers to Pan and Zoom</em></p>
   <div class="google-maps">
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ban6-EbsRVlIfwDkU5qYQjqBWZE-M8w&ehbc=2E312F" 
@@ -190,38 +220,13 @@ video {
     </iframe>
   </div>
 </div>
-<div class="w3-content w3-container w3-padding-64" >
-  <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <div class="container" >
-    <h2 class="heading-text">Ride Pictures</h2>
-    <div class="image-gallery">
-      <div class="column">
-        <div class="image-item">
-          <img src="/media/IMG_0811 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        </div>
-        <div class="image-item">
-          <img src="/media/IMG_0812 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        </div>
-      </div>
-      <div class="column">
-        <div class="image-item">
-          <img src="/media/IMG_0813 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        </div>
-        <div class="image-item">
-          <img src="/media/IMG_0815 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <div class="container" >
   <h2 class="heading-text">Ride Pictures</h2>
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0092 Ride.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0092 Ride.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="" />
       </div>
       <div class="image-item">
         <img src="/media/IMG_0486 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
