--- a/index2.html
+++ b/index2.html
@@ -259,10 +259,6 @@ video {
 
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0559 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-      <div class="image-item">
         <img src="/media/IMG_0562 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
 
       </div>
@@ -292,9 +288,40 @@ video {
         <img src="/media/IMG_0560 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
 
       </div>
+    </div>
+  </div>
+</div>
+<div class="w3-content w3-container w3-padding-64">
+  <h3 class="w3-center">Via francigena</h3>
+  <p>We accidentily found ourselves following an ancient pilgrimage path called Via Francigena on some of our rides. Via Francigena runs all the way from 
+    Canterbury England to Rome. The first record of the route dates to the year 725. The churchs below were refuges for pilgrims on the way to Rome. 
+  </p>
+  <p>
+    The coolest thing we found was this unmarked hidden pool just off the trail. It turned out to be "The Caldane". These are thermal baths built on 
+    a warm water spring used by the Etruscans and Romans. You can still still ceramic tiles on the bottom. 
+    The baths were destroyed in 1200 by invading troops. Wikipedia says locals still use the pools for their healing powers. 
+  </p>
+</div>
+<div class="w3-container w3-content">
+  <div class="image-gallery">
+    <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0581 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
+        <img src="/media/IMG_0551 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="" />
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0559 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+         alt="" />
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0581 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        alt="" />
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0582 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+         alt="" />
       </div>
     </div>
   </div>
